--- a/pages/graficos.html
+++ b/pages/graficos.html
@@ -8,7 +8,7 @@
     <!-- Ícono de la pestaña (favicon) -->
     <link
       rel="icon"
-      href="./assets/img/icons/psyduck_icon.ico"
+      href="../assets/img/icons/psyduck_icon.ico"
       type="image/x-icon"
     />
 
@@ -24,41 +24,49 @@
       rel="stylesheet"
     />
 
-    <!-- Bootstrap Bundle con JavaScript para funcionalidades dinámicas -->
+    <!-- Bootstrap Bundle con JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Archivo CSS personalizado para estilos adicionales -->
+    <!-- Archivo CSS personalizado -->
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
-    <!-- Sidebar (barra lateral de navegación) -->
-    <div class="sidebar">
-      <!-- Logo o imagen principal de la sidebar -->
-      <h4 class="mb-3">
-        <img
-          src="../assets/img/PokeBank-logo.png"
-          alt="Imagen de Sidebar"
-          style="width: 200px; height: auto"
-        />
-      </h4>
+    <!-- Contenedor Principal -->
+    <div class="container-fluid">
+      <!-- Sidebar (barra lateral de navegación) -->
+      <aside class="sidebar">
+        <h4 class="mb-3">
+          <img
+            src="../assets/img/PokeBank-logo.png"
+            alt="Logo"
+            style="width: 200px; height: auto"
+          />
+        </h4>
 
-      <!-- Enlaces de navegación dentro de la sidebar -->
-      <a href="../index.html"><i class="bi bi-speedometer2"></i> Dashboard</a>
-      <!-- Enlace al Dashboard -->
-      <a href="../pages/historial.html"
-        ><i class="bi bi-table"></i> Historial</a
-      >
-      <!-- Enlace al Historial -->
-      <a href="../pages/graficos.html"><i class="bi bi-grid"></i> Gráficos</a>
-      <!-- Enlace a la sección de Gráficos -->
+        <a href="../index.html"><i class="bi bi-speedometer2"></i> Dashboard</a>
+        <a href="../pages/historial.html"
+          ><i class="bi bi-table"></i> Historial</a
+        >
+        <a href="../pages/graficos.html"><i class="bi bi-grid"></i> Gráficos</a>
 
-      <!-- Sección de información del usuario en la parte inferior -->
-      <div class="user-info">
-        <img src="../assets/img/headhshot.png" alt="User" />
-        <!-- Imagen del usuario -->
-        <span>Ash Ketchum</span>
-        <!-- Nombre del usuario -->
-      </div>
+        <!-- Sección de información del usuario -->
+        <div class="user-info">
+          <div class="profile-pic">
+            <img src="../assets/img/headhshot.png" alt="User" />
+            <span>Ash Ketchum</span>
+          </div>
+          <div>
+            <button type="button" class="btn btn-outline-danger btn-salir">
+              Salir
+            </button>
+          </div>
+        </div>
+      </aside>
+
+      <!-- Contenido Principal -->
+      <main class="main-content-graficos">
+        <h1>Graficos</h1>
+      </main>
     </div>
   </body>
 </html>
