--- a/pages/graficos.html
+++ b/pages/graficos.html
@@ -5,35 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PokeBank | DAW</title>
 
-    <!-- Ícono de la pestaña (favicon) -->
+    <!-- Ícono de la pestaña -->
     <link
       rel="icon"
       href="../assets/img/icons/psyduck_icon.ico"
       type="image/x-icon"
     />
 
-    <!-- Bootstrap 5 para estilos y diseño responsivo -->
+    <!-- Bootstrap 5 -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-
-    <!-- Bootstrap Icons para los íconos del menú -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
       rel="stylesheet"
     />
-
-    <!-- Bootstrap Bundle con JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <!-- Archivo CSS personalizado -->
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
-    <!-- Contenedor Principal -->
     <div class="container-fluid">
-      <!-- Sidebar (barra lateral de navegación) -->
+      <!-- Sidebar -->
       <aside class="sidebar">
         <h4 class="mb-3">
           <img
@@ -49,7 +47,6 @@
         >
         <a href="../pages/graficos.html"><i class="bi bi-grid"></i> Gráficos</a>
 
-        <!-- Sección de información del usuario -->
         <div class="user-info">
           <div class="profile-pic">
             <img src="../assets/img/headhshot.png" alt="User" />
@@ -65,8 +62,38 @@
 
       <!-- Contenido Principal -->
       <main class="main-content-graficos">
-        <h1>Graficos</h1>
+        <div class="container text-center">
+          <div class="row justify-content-center">
+            <div class="col-md-6">
+              <div class="chart-container">
+                <h2 class="titulo-charts">Depósitos Mensuales</h2>
+                <canvas id="depositosChart"></canvas>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="chart-container">
+                <h2 class="titulo-charts">Retiros Mensuales</h2>
+                <canvas id="retirosChart"></canvas>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="chart-container">
+                <h2 class="titulo-charts">Transanciones</h2>
+                <canvas id="depositosTransaccionesChart"></canvas>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="chart-container">
+                <h2 class="titulo-charts">Pagos de servicios</h2>
+                <canvas id="ServiciosChart"></canvas>
+              </div>
+            </div>
+          </div>
+        </div>
       </main>
     </div>
+
+    <!-- Script de Charts.js -->
+    <script src="../scripts/charts.js" defer></script>
   </body>
 </html>
