--- a/index.html
+++ b/index.html
@@ -43,11 +43,9 @@
           />
         </h4>
 
-        <a href="../index.html"><i class="bi bi-speedometer2"></i> Dashboard</a>
-        <a href="../pages/historial.html"
-          ><i class="bi bi-table"></i> Historial</a
-        >
-        <a href="../pages/graficos.html"><i class="bi bi-grid"></i> Gráficos</a>
+        <a href="index.html"><i class="bi bi-speedometer2"></i> Dashboard</a>
+        <a href="pages/historial.html"><i class="bi bi-table"></i> Historial</a>
+        <a href="/pages/graficos.html"><i class="bi bi-grid"></i> Gráficos</a>
 
         <!-- Sección de información del usuario -->
         <div class="user-info">
