--- a/pages/graficos.html
+++ b/pages/graficos.html
@@ -42,10 +42,8 @@
         </h4>
 
         <a href="../index.html"><i class="bi bi-speedometer2"></i> Dashboard</a>
-        <a href="../pages/historial.html"
-          ><i class="bi bi-table"></i> Historial</a
-        >
-        <a href="../pages/graficos.html"><i class="bi bi-grid"></i> Gráficos</a>
+        <a href="historial.html"><i class="bi bi-table"></i> Historial</a>
+        <a href="graficos.html"><i class="bi bi-grid"></i> Gráficos</a>
 
         <div class="user-info">
           <div class="profile-pic">
