--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -5,35 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PokeBank | DAW</title>
 
-    <!-- Ícono de la pestaña (favicon) -->
     <link
       rel="icon"
       href="../assets/img/icons/psyduck_icon.ico"
       type="image/x-icon"
     />
 
-    <!-- Bootstrap 5 para estilos y diseño responsivo -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
 
-    <!-- Bootstrap Icons para los íconos del menú -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
       rel="stylesheet"
     />
 
-    <!-- Bootstrap Bundle con JavaScript para funcionalidades dinámicas -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Archivo CSS personalizado para estilos adicionales -->
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
-    <!-- Contenedor Principal -->
+
     <div class="container-fluid">
-      <!-- Sidebar (barra lateral de navegación) -->
+
       <aside class="sidebar">
         <h4 class="mb-3">
           <img
@@ -43,11 +38,10 @@
           />
         </h4>
 
-        <a href="../index.html"><i class="bi bi-speedometer2"></i> Dashboard</a>
+        <a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a>
         <a href="historial.html"><i class="bi bi-table"></i> Historial</a>
         <a href="graficos.html"><i class="bi bi-grid"></i> Gráficos</a>
 
-        <!-- Sección de información del usuario -->
         <div class="user-info">
           <div class="profile-pic">
             <img src="../assets/img/headhshot.png" alt="User" />
@@ -61,10 +55,62 @@
         </div>
       </aside>
 
-      <!-- Contenido Principal -->
+
       <main class="main-content-historial">
         <h1>Dashboard</h1>
+
+
+        <div class="card p-3 mb-3">
+          <h3>Consultar Saldo</h3>
+          <p>Saldo disponible: <span id="saldo">$0.00</span></p>
+          <button class="btn btn-primary" onclick="consultarSaldo()">Actualizar Saldo</button>
+        </div>
+
+
+        <div class="card p-3">
+          <h3>Pagar Servicios</h3>
+          <select id="servicio" class="form-select mb-2">
+            <option value="luz">Luz</option>
+            <option value="agua">Agua</option>
+            <option value="cable">Cable</option>
+            <option value="internet">Internet</option>
+          </select>
+          <input type="number" id="monto" class="form-control mb-2" placeholder="Monto a pagar" />
+          <button class="btn btn-success" onclick="pagarServicio()">Pagar</button>
+        </div>
       </main>
     </div>
+
+    <script>
+      let saldo = 0.00; // Simulación de saldo inicial en 0
+
+      function consultarSaldo() {
+        document.getElementById("saldo").textContent = `$${saldo.toFixed(2)}`;
+      }
+
+      function pagarServicio() {
+        let servicio = document.getElementById("servicio").value;
+        let monto = parseFloat(document.getElementById("monto").value);
+
+        if (saldo === 0) {
+          alert("No tienes saldo suficiente para realizar pagos.");
+          return;
+        }
+
+        if (isNaN(monto) || monto <= 0) {
+          alert("Ingrese un monto válido");
+          return;
+        }
+
+        if (monto > saldo) {
+          alert("Dinero insuficiente para realizar el pago.");
+          return;
+        }
+
+        saldo -= monto;
+        consultarSaldo();
+        alert(`Pago realizado con éxito. Servicio: ${servicio}, Monto: $${monto.toFixed(2)}`);
+      }
+    </script>
   </body>
 </html>
