--- a/index.html
+++ b/index.html
@@ -5,66 +5,185 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PokeBank | DAW</title>
 
-    <!-- Ícono de la pestaña (favicon) -->
+    <!-- Favicon -->
     <link
       rel="icon"
       href="./assets/img/icons/psyduck_icon.ico"
       type="image/x-icon"
     />
 
-    <!-- Bootstrap 5 para estilos y diseño responsivo -->
+    <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-
-    <!-- Bootstrap Icons para los íconos del menú -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
       rel="stylesheet"
     />
-
-    <!-- Bootstrap Bundle con JavaScript para funcionalidades dinámicas -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Archivo CSS personalizado para estilos adicionales -->
+    <!-- Estilo personalizado -->
     <link rel="stylesheet" href="./css/style.css" />
+
+    <style>
+      body {
+        background-color: #222;
+        color: white;
+        font-family: Arial, sans-serif;
+      }
+
+      .sidebar {
+        background-color: #222;
+        color: white;
+        padding: 20px;
+        position: fixed;
+        height: 100vh;
+        width: 220px;
+      }
+
+      .sidebar a {
+        color: white;
+        display: block;
+        margin: 10px 0;
+        text-decoration: none;
+      }
+
+      .sidebar a:hover {
+        text-decoration: underline;
+      }
+
+      .user-info {
+        margin-top: 30px;
+        text-align: center;
+      }
+
+      .user-info img {
+        width: 100px;
+        border-radius: 50%;
+        margin-bottom: 10px;
+      }
+
+      .main-content-index {
+        margin-left: 220px;
+        padding: 40px;
+        min-height: 100vh;
+        background-color: #2c2c2c;
+      }
+
+      .atm-title {
+        color: #0d6efd;
+        margin-bottom: 30px;
+        text-align: center;
+      }
+
+      .atm-card {
+        background-color: #333;
+        border-left: 5px solid #0d6efd;
+        padding: 20px;
+        border-radius: 8px;
+        margin-bottom: 20px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+      }
+
+      .atm-card h5 {
+        color: #ffffff;
+        margin-bottom: 10px;
+      }
+
+      .atm-card p {
+        margin: 0;
+        font-size: 1.2rem;
+      }
+    </style>
   </head>
+
   <body>
-    <!-- Contenedor Principal -->
     <div class="container-fluid">
-      <!-- Sidebar (barra lateral de navegación) -->
+      <!-- Sidebar -->
       <aside class="sidebar">
         <h4 class="mb-3">
-          <img
-            src="../assets/img/PokeBank-logo.png"
-            alt="Logo"
-            style="width: 200px; height: auto"
-          />
+          <img src="../assets/img/PokeBank-logo.png" alt="Logo" style="width: 200px" />
         </h4>
 
         <a href="index.html"><i class="bi bi-speedometer2"></i> Dashboard</a>
         <a href="pages/historial.html"><i class="bi bi-table"></i> Historial</a>
         <a href="/pages/graficos.html"><i class="bi bi-grid"></i> Gráficos</a>
 
-        <!-- Sección de información del usuario -->
         <div class="user-info">
-          <div class="profile-pic">
-            <img src="../assets/img/headhshot.png" alt="User" />
-            <span>Ash Ketchum</span>
-          </div>
-          <div>
-            <button type="button" class="btn btn-outline-danger btn-salir">
-              Salir
-            </button>
-          </div>
+          <img src="../assets/img/headhshot.png" alt="Ash" />
+          <span class="d-block mt-2">Ash Ketchum</span>
+          <button type="button" class="btn btn-outline-danger btn-salir mt-3">
+            Salir
+          </button>
         </div>
       </aside>
 
       <!-- Contenido Principal -->
       <main class="main-content-index">
-        <h1>Dashboard</h1>
+        <h2 class="atm-title">Bienvenido a PokeBank - Cajero Virtual</h2>
+
+        <div class="row">
+          <div class="col-md-6">
+            <div class="atm-card">
+              <h5>Nombre</h5>
+              <p id="nombre"></p>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="atm-card">
+              <h5>Número de Cuenta</h5>
+              <p id="cuenta"></p>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="atm-card">
+              <h5>Saldo Disponible</h5>
+              <p id="saldo"></p>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="atm-card">
+              <h5>Fecha y Hora Actual</h5>
+              <p id="fechaHora"></p>
+            </div>
+          </div>
+
+          <div class="col-md-12">
+            <div class="atm-card">
+              <h5>Opciones Disponibles</h5>
+              <ul>
+                <li>💵 Consultar Saldo</li>
+                <li>🏧 Retirar Dinero</li>
+                <li>💳 Depositar Dinero</li>
+                <li>📄 Ver Últimos Movimientos</li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </main>
     </div>
+
+    <script>
+      const usuario = {
+        nombre: "Ash Ketchum",
+        cuenta: "0987654321",
+        saldo: 500.0,
+      };
+
+      document.getElementById("nombre").textContent = usuario.nombre;
+      document.getElementById("cuenta").textContent = usuario.cuenta;
+      document.getElementById("saldo").textContent = `$${usuario.saldo.toFixed(2)}`;
+
+      const fecha = new Date();
+      const fechaHora = fecha.toLocaleString("es-SV", {
+        dateStyle: "medium",
+        timeStyle: "short",
+      });
+      document.getElementById("fechaHora").textContent = fechaHora;
+    </script>
   </body>
 </html>
